사진나오게하기

--- a/noin33/src/main/webapp/resources/css/Home.css
+++ b/noin33/src/main/webapp/resources/css/Home.css
@@ -1,5 +1,5 @@
 .u-section-1-1 {
-  background-image: url("images/e15acaf1-0e30-1593-b0af-c0496ff69b29.jpg");
+  background-image: url("../images/image.png");
   background-position: 50% 50%;
 }
 
