--- a/noin33/src/main/webapp/resources/css/style.css
+++ b/noin33/src/main/webapp/resources/css/style.css
@@ -8225,7 +8225,7 @@ h1, h2, h3, h4, h5,
 
 .hero-wrap {
   width: 100%;
-  height: 850px;
+  height: 500px;
   position: inherit;
   background-size: cover;
   background-repeat: no-repeat;
@@ -8257,7 +8257,7 @@ h1, h2, h3, h4, h5,
       height: 400px !important; }
 
 .slider-text {
-  height: 850px;
+  height: 500px;
   position: relative; }
   .slider-text h1 {
     font-size: 60px;
@@ -8473,12 +8473,12 @@ h1, h2, h3, h4, h5,
   position: relative; }
   @media (min-width: 768px) {
     .ftco-intro .intro {
-      margin-top: -70px; } }
+       } }
   .ftco-intro .intro.aside-stretch {
     background: #589167; }
     .ftco-intro .intro.aside-stretch:after {
       position: absolute;
-      top: 0;
+      
       right: 100%;
       bottom: 0;
       content: '';
