--- a/noin33/src/main/webapp/resources/css/style.css
+++ b/noin33/src/main/webapp/resources/css/style.css
@@ -8225,7 +8225,8 @@ h1, h2, h3, h4, h5,
 
 .hero-wrap {
   width: 100%;
-  height: 500px;
+  max-width:100%;
+  height: 800px;
   position: inherit;
   background-size: cover;
   background-repeat: no-repeat;
@@ -8926,8 +8927,9 @@ textarea.form-control {
   height: inherit !important; }
 
 .ftco-footer {
+  bottom: 0;
   font-size: 16px;
-  padding: 6em 0 0 0;
+  padding: 0em 0 0 0;
   background: #1a1a1a;
   color: rgba(255, 255, 255, 0.9); }
   .ftco-footer .logo a {
