--- a/noin33/src/main/webapp/resources/css/style.css
+++ b/noin33/src/main/webapp/resources/css/style.css
@@ -8056,6 +8056,7 @@ h1, h2, h3, h4, h5,
   padding: 10px 0; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
+  	  background: #ffffff !important;
       position: relative;
       top: 0;
       padding: 10px 15px; } }
