--- a/noin33/src/main/webapp/resources/css/style.css
+++ b/noin33/src/main/webapp/resources/css/style.css
@@ -8417,8 +8417,8 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #589167 !important;
-    border: 1px solid #589167 !important;
+    background: #589167 ;
+    border: 1px solid #589167 ;
     color: #fff !important; }
     .btn.btn-primary:hover {
       border: 1px solid #589167;
