빈 호버수정

--- a/noin33/src/main/webapp/resources/css/style.css
+++ b/noin33/src/main/webapp/resources/css/style.css
@@ -59,6 +59,11 @@ body {
   text-align: left;
   background-color: #fff; }
 
+a:hover{
+    	background-color:#dbead5 !important;
+    	border: 1px solid #dbead5 !important;
+    	color : black !important; }
+
 [tabindex="-1"]:focus {
   outline: 0 !important; }
 
