--- a/noin33/src/main/webapp/resources/css/style.css
+++ b/noin33/src/main/webapp/resources/css/style.css
@@ -8036,7 +8036,7 @@ a {
 h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
   line-height: 1.5;
-  color: rgba(0, 0, 0, 0.7);
+  color: #000000;
   font-weight: 400; }
 
 .wrap {
