푸터 마지막 수정(친구창은 아직 안했음) 남은거 : 메인페이지 조금 손보기, 친구창 디자인, 퍼스트페이지 배너 다시 제작

--- a/noin33/src/main/webapp/resources/css/style.css
+++ b/noin33/src/main/webapp/resources/css/style.css
@@ -8643,6 +8643,9 @@ h1, h2, h3, h4, h5,
 textarea.form-control {
   height: inherit !important; }
 
+.ftco-animate {
+  opacity: 1;
+  visibility: visible; }
 
 .bg-primary {
   background: #589167 !important; }
