--- a/noin33/src/main/webapp/resources/css/style.css
+++ b/noin33/src/main/webapp/resources/css/style.css
@@ -8867,7 +8867,7 @@ textarea.form-control {
     width: 100%;
     content: '';
     opacity: .5;
-    background: #589167; }
+    background: #fff; }
   .ftco-appointment .half {
     width: 100%; }
     .ftco-appointment .half h2 {
