--- a/noin33/src/main/webapp/resources/css/style.css
+++ b/noin33/src/main/webapp/resources/css/style.css
@@ -465,7 +465,7 @@ pre {
       max-width: 960px; } }
   @media (min-width: 1200px) {
     .container {
-      max-width: 100%; } }
+      max-width: 1140px; } }
 
 .container-fluid {
   width: 100%;
